pkl-core/src/test/files/LanguageSnippetTests/input/errors/noDefault2.pkl
// alias has a default
typealias Foo = *"foo"|"bar"

// but property doesn't
foo: Foo|"baz"
